# Relang

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README.org  TODO.txt  arr_counter.amc  basic.amc  basic.amc.bug  basic.amc.bug2  basic.bug  basic.cmp  basic.cr  build  build.py  build.sh  build_release  exp.amc  launch.json  loop.amc
ALA/: CMakeLists.txt
ALA/include/: ALA.h
ALA/src/: Analyzer.cpp  Analyzer.h  Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Utils.h  main.cpp
ALASM/: CMakeLists.txt
ALASM/src/: Assembler.cpp  Assembler.h  Lexer.cpp  Lexer.h  Utils.h  main.cpp
ALVM/: CMakeLists.txt
ALVM/include/: ALVM.h
ALVM/pch/: sdafx.h
ALVM/src/: ByteBuffer.cpp  ByteBuffer.h  Instruction.h  MemMan.h  Register.h  Runtime.cpp  Runtime.h  Utils.h  main.cpp
Test/: CMakeLists.txt
Test/src/: ALVM_Testman.h  CommonUtils.h  main.cpp
alasm/: CMakeLists.txt
alasm/include/: ALASM.h
alasm/src/: Assembler.cpp  Assembler.h  Lexer.cpp  Lexer.h  main.cpp
alcc/: CMakeLists.txt  Cargo.toml
alcc/src/: main.rs
alcc/src/lexer/: mod.rs
alcc/src/rlang/analyzer/: lexer.rs  mod.rs  parser.rs
alvm/: CMakeLists.txt
alvm/include/: ALVM.h
alvm/src/: Instruction.h  Register.h  Runtime.cpp  Runtime.h  Utils.cpp  Utils.h  main.cpp
basm/: CMakeLists.txt
basm/include/: BASM.h
basm/src/: Assembler.cpp  Assembler.h  Lexer.cpp  Lexer.h  Utils.h  main.cpp
blend/: CMakeLists.txt
blend/include/: BLEND.h
blend/pch/: sdafx.cpp  sdafx.h
blend/src/: Instruction.h  Register.h  Runtime.cpp  Runtime.h  Utils.cpp  Utils.h  main.cpp
examples/: basic.alc  basic.asl  bss.alc  bss.asl  init_mem.asl  main  snake.asl  stack_array.asl  test.asl
examples/alasm/old_syntax/: old_snake.amc
examples/old_syntax/: old_snake.amc  snake.amc
include/: CommonDef.h
refront/: .clang-format  CMakeLists.txt
refront/examples/: example.cmm
refront/src/: main.cpp
refront/src/Analyzer/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
refront/src/Compiler/: Compiler.cpp  Compiler.h
